--- a/resources/[scripts_others]/xp-character/character-nui/style.css
+++ b/resources/[scripts_others]/xp-character/character-nui/style.css
@@ -12,16 +12,8 @@ body {
 
 #app {
     height: 100vh;
+    display: none;
 }
-
-.logo {
-    width: 8vw;
-    position: absolute;
-    transform: translate(-50%);
-    left: 50%;
-    top: 1vw;
-}
-
 #container {
     width: 100%;
     padding: 1.7vw;
@@ -32,6 +24,7 @@ body {
 
 .left {
     position: relative;
+    margin-top: 20%;
     width: max-content;
     height: 100%;
     display: flex;
@@ -43,6 +36,7 @@ body {
     position: relative;
     width: max-content;
     height: 100%;
+    margin-top: 20%;
     display: flex;
     flex-direction: column;
     gap: 1vw;
@@ -72,7 +66,7 @@ body {
     width: 3.6vw;
     height: 3.2vw;
     border-radius: .5vw;
-    border: solid .2vw #4c4c4c;
+    border: solid .2vw #557b83;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -95,11 +89,12 @@ body {
 }
 
 .selectedCategory {
-    border-color: #557b83 !important;
+    border-color: white !important;
 }
 
 .selectedCategory > img {
-    filter: invert(20%) sepia(65%) saturate(3100%) hue-rotate(346deg) brightness(118%) contrast(96%) !important;
+    filter: invert(280%) sepia(14%) saturate(100%) hue-rotate(68deg) brightness(100%) contrast(100%) !important;
+
 }
 
 .activeCircle {
@@ -124,9 +119,11 @@ body {
 .itensContainer {
     position: relative;
     width: 22.4vw;
-    height: 30vw;
-    background-image: url('./assets/lbg_content.png');
+    height: 35.9vw;
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(80,80,80,1) 35%, rgba(145,145,145,1) 100%);
     background-size: 100% 100%;
+    border-radius: 3%;
     margin-left: 1.22vw;
     padding: 2.4vw 1vw;
     display: flex;
@@ -139,8 +136,10 @@ body {
     position: relative;
     width: 22.8vw;
     height: 35.9vw;
-    background-image: url('./assets/rbg_content.png');
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(80,80,80,1) 35%, rgba(145,145,145,1) 100%);
     background-size: 100% 100%;
+    border-radius: 3%;
     margin-right: 1.22vw;
     padding: 2.4vw 2vw;
     gap: 1vw;
@@ -152,7 +151,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-height: 20vw;
+    max-height: 24vw;
     width: 100%;
     overflow-y: auto;
     gap: 1.5vw;
@@ -208,8 +207,16 @@ body {
     font-size: .8vw;
     width: max-content;
     background: #557b83;
+    position: absolute;
+    transform: translate(-50%,0%);
+    left: 50%;
+    bottom: 1.5vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: .6vw;
 }
-
 .inputLabel {
     font-family: 'medium';
     color: #fff;
@@ -362,7 +369,7 @@ body {
 
 .parentRow button {
     height: min-content;
-    color: #557b83;
+    color: white;
     font-family: 'black';
     font-size: .9vw;
     background: none;
@@ -413,7 +420,7 @@ body {
     position: absolute;
     transform: translate(-50%,0%);
     left: 50%;
-    bottom: 1.5vw;
+    margin-top: 1%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -423,7 +430,7 @@ body {
 
 .rotationInput p {
     font-family: 'black';
-    color: #fff;
+    color: black;
     letter-spacing: .5vw;
     text-transform: uppercase;
     font-size: .6vw;
@@ -475,7 +482,6 @@ input[type="range"]::-webkit-slider-runnable-track {
     width: 100%;
     height: 1.25vw;
     cursor: pointer;
-    animate: 0.2s;
     background: #353535;
     border-radius: .5vw;
     border: 0px solid #000000;
@@ -502,7 +508,6 @@ img {
     -ms-user-select: none;
     user-select: none;
     -webkit-user-drag: none;
-    user-drag: none;
     -webkit-touch-callout: none;
 }
 
